# angulogin-app

./: .env  .firebaserc  .gitignore  .prompt  AGENTS.md  CHANGELOG.md  README.md  angular.json  debug-output.css  firebase.json  firestore.rules  package-lock.json  package.json
.agent/artifacts/: ui_ux_audit_report.md
.agent/rules/: project_rules.md  rules.md
.agent/workflows/: ui-ux-pro-max.md
.artifacts/: ui_ux_audit_report.md
.brain/: brain.json  handover.md  rpa-test-plan.md
.gemini/: GEMINI.md
.serena/: project.yml
.serena/memories/: codebase_structure.md  operational_rules.md  project_overview.md  style_conventions.md  style_guide.md  suggested_commands.md  task_completion.md
docs/: AUDIT_REPORT.md  BACKLOG.md  BRIEF.md  FEATURE_AUDIT_TRACKER.md  automation-guide-vi.md  design-specs.md
functions/: package-lock.json  package.json
http/: api.http  postman_collection.json
scripts/: add-dark-mode.mjs  demo-automation-api.js  demo-etsy-browse.js  seed-rpa-templates.ts  set-admin-claim.ts  test-all-templates.js
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extensions/stealth/: background.js  content.js  manifest.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_models.rs  api_server.rs  camoufox_downloader.rs  camoufox_env.rs  camoufox_manager.rs  cdp.rs  commands.rs  cookies.rs  lib.rs  oauth.rs  proxy_relay.rs  rpa.rs  rpa_api.rs
src-tauri/src/browser_manager/: download.rs  mod.rs  platform.rs
src-tauri/src/fingerprint/: data.rs  generator.rs  mod.rs  types.rs
(+195 files in other folders)
