[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
fs_extra = "1.3"
zip = "0.6"
tauri-plugin-os = "2.3.2"
chrono = "0.4"
base64 = "0.22"

# Camoufox integration
reqwest = { version = "0.12", features = ["stream", "json"] }
sha2 = "0.10"
directories = "5"
sysinfo = "0.32"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Cookie import/export
rusqlite = { version = "0.31", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["std"] }
hmac = "0.12"
sha1 = "0.10"

# Backup encryption (Feature 5.7)
aes-gcm = "0.10"
rand = "0.8"
